; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_auxiliar.c_auxiliar_add2group.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_auxiliar.c_auxiliar_add2group.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @auxiliar_add2group(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @luaL_getmetatable(i32* %7, i8* %8)
  %10 = load i32*, i32** %4, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @lua_pushstring(i32* %10, i8* %11)
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @lua_pushboolean(i32* %13, i32 1)
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @lua_rawset(i32* %15, i32 -3)
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @lua_pop(i32* %17, i32 1)
  ret void
}

declare dso_local i32 @luaL_getmetatable(i32*, i8*) #1

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1

declare dso_local i32 @lua_rawset(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
